# fmod_flutter

./: .gitignore  CHANGELOG.md  FMOD_SETUP.md  LICENSE  QUICK_START.md  README.md  SETUP_SUMMARY.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  proguard-rules.pro  settings.gradle
android/libs/include/: fmod_common.h
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  fmod_jni.cpp
android/src/main/kotlin/com/gravesweeper/fmod_flutter/: FmodFlutterPlugin.kt  FmodManager.kt
android/src/main/kotlin/com/midnightlaunchgames/fmod_flutter/: FmodFlutterPlugin.kt  FmodManager.kt
engines/: README.md
example/: .metadata  EXAMPLE_APP_SUMMARY.md  README.md  pubspec.yaml
example/assets/audio/: Master.bank  Master.strings.bank  Music.bank  SFX.bank
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/web/: index.html
ios/: fmod_flutter.podspec
ios/Classes/: FmodBridge.h  FmodBridge.m  FmodFlutterPlugin.swift  FmodManager.swift
lib/: fmod_flutter.dart
lib/src/: fmod_method_channel.dart  fmod_platform_interface.dart  fmod_service.dart  fmod_web.dart  fmod_web_stub.dart
macos/: fmod_flutter.podspec
macos/Classes/: FmodBridge.h  FmodBridge.m  FmodFlutterPlugin.swift  FmodManager.swift
tool/: setup_fmod.dart
web/: index.html
windows/: CMakeLists.txt  fmod_bridge.cpp  fmod_bridge.h  fmod_flutter_plugin.cpp  fmod_flutter_plugin.h  fmod_flutter_plugin_c_api.cpp
windows/include/fmod_flutter/: fmod_flutter_plugin_c_api.h
